--- a/multivariable/Monday_Meetings/5th.html
+++ b/multivariable/Monday_Meetings/5th.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Derivatives</title>
+	<title>5th</title>
 	<meta name='Generator' content='Zim 0.68'>
 	<style type='text/css'>
 		a          { text-decoration: none      }
@@ -51,34 +51,36 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <span class='insen'>Prev</span> ]
+	[ <a href='./4th.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
-	[ <a href='./Derivatives/Chain_Rule_-_Tangent_Plane.html'>Next</a> ]
+	[ <a href='../Udemy_Practice.html'>Next</a> ]
 </div>
 
 <hr />
 
 <div class="menu">
 <ul>
-<li><b>Derivatives</b>
+<li><a href="../Derivatives.html" title="Derivatives" class="page">Derivatives</a></li>
+<li><a href="../Home.html" title="Home" class="page">Home</a></li>
+<li><a href="../Homework.html" title="Homework" class="page">Homework</a></li>
+<li><a href="../Introduction.html" title="Introduction" class="page">Introduction</a></li>
+<li><a href="../Limits.html" title="Limits" class="page">Limits</a></li>
+<li><a href="../Linear_Functions.html" title="Linear Functions" class="page">Linear Functions</a></li>
+<li><a href="../Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
+<li><a href="../Matrices.html" title="Matrices" class="page">Matrices</a></li>
+<li><a href="../Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a>
 <ul>
-<li><a href="./Derivatives/Chain_Rule_-_Tangent_Plane.html" title="Chain Rule - Tangent Plane" class="page">Chain Rule - Tangent Plane</a></li>
-<li><a href="./Derivatives/Jacobian_Derivative.html" title="Jacobian Derivative" class="page">Jacobian Derivative</a></li>
-<li><a href="./Derivatives/Partial_Derivatives_-_Gradient.html" title="Partial Derivatives - Gradient" class="page">Partial Derivatives - Gradient</a></li>
+<li><a href="./1st.html" title="1st" class="page">1st</a></li>
+<li><a href="./2nd.html" title="2nd" class="page">2nd</a></li>
+<li><a href="./3rd.html" title="3rd" class="page">3rd</a></li>
+<li><a href="./4th.html" title="4th" class="page">4th</a></li>
+<li><b>5th</b></li>
 </ul>
 </li>
-<li><a href="./Home.html" title="Home" class="page">Home</a></li>
-<li><a href="./Homework.html" title="Homework" class="page">Homework</a></li>
-<li><a href="./Introduction.html" title="Introduction" class="page">Introduction</a></li>
-<li><a href="./Limits.html" title="Limits" class="page">Limits</a></li>
-<li><a href="./Linear_Functions.html" title="Linear Functions" class="page">Linear Functions</a></li>
-<li><a href="./Lines_and_Planes.html" title="Lines and Planes" class="page">Lines and Planes</a></li>
-<li><a href="./Matrices.html" title="Matrices" class="page">Matrices</a></li>
-<li><a href="./Monday_Meetings.html" title="Monday Meetings" class="page">Monday Meetings</a></li>
-<li><a href="./Udemy_Practice.html" title="Udemy Practice" class="page">Udemy Practice</a></li>
-<li><a href="./Vectors.html" title="Vectors" class="page">Vectors</a></li>
+<li><a href="../Udemy_Practice.html" title="Udemy Practice" class="page">Udemy Practice</a></li>
+<li><a href="../Vectors.html" title="Vectors" class="page">Vectors</a></li>
 </ul>
 
 </div>
@@ -87,26 +89,77 @@
 
 <div class='pages'>
 	<div class='heading'>
-	<h1>Derivatives <a name='Derivatives'></a></h1>
+	<h1>5th <a name='Monday Meetings:5th'></a></h1>
 	</div>
 
 	<div class='content'>
 	<p>
-Created Tuesday 23 June 2020
+Created Monday 29 June 2020
 </p>
 
+<p>
+I believe this may be the last meeting. 
+</p>
+
+<p>
+He begins by answering a question about the directional derivative.
+</p>
+
+<p>
+He's drawing a bit to explain. I might come back later to fill this out since the lecture is being recorded.
+</p>
+
+<p>
+<b>Be sure to know all the definitions well he says. </b>He's a proofy kind of guy so knowing that stuff well will help a ton.
+</p>
+
+<h3>Quiz 2</h3>
+
+<p>
+Will be the last day. Thursday. Same kind of quiz as last time. Perhaps 10 minutes more to do it. Same deal as last time though.
+</p>
+
+<p>
+You will need to know everything from our lessons on Limits all the way up to the Lagrange.
+</p>
+
+<p>
+He will send us a solved homework with solution on Thursday. Also, another homework will be given on Thursday.
+</p>
+
+<p>
+So, limits, open sets, derivatives, linear map, minima+maxima, etc.
+</p>
+
+<h3>Final</h3>
+
+<p>
+Will be on Monday, July 6th at 10am. We will have much more time. It will be cumulative (of course. It is a final in a math class).
+</p>
+
+<h3>HW</h3>
+
+<p>
+He didn't solve the first exercise because the solution is <i>obvious.</i><br>
+He wanted to note that<br>
+<img src="./5th/equation.png">
+</p>
 
 	</div>
 
 	<br />
 
 	<div class='page-footer'>
-		<b>Backlinks:</b>
 
-		<a href='./Homework/Homework_4.html'>Homework:Homework 4</a>
+			<b>Attachments:</b>
+			<table>
 
-		<br /><br />
+			<tr><td><a href='./5th/equation.png'>equation.png</a></td><td>&nbsp;</td><td>1.38kb</td></tr>
 
+
+			<tr><td><a href='./5th/equation.tex'>equation.tex</a></td><td>&nbsp;</td><td>171b</td></tr>
+
+			</table>
 	</div>
 
 	
