--- a/multivariable/Monday_Meetings/1st.html
+++ b/multivariable/Monday_Meetings/1st.html
@@ -76,6 +76,7 @@
 <li><a href="./2nd.html" title="2nd" class="page">2nd</a></li>
 <li><a href="./3rd.html" title="3rd" class="page">3rd</a></li>
 <li><a href="./4th.html" title="4th" class="page">4th</a></li>
+<li><a href="./5th.html" title="5th" class="page">5th</a></li>
 </ul>
 </li>
 <li><a href="../Udemy_Practice.html" title="Udemy Practice" class="page">Udemy Practice</a></li>
