added final calc3 notes. Also, I got an A babyls!

--- a/multivariable/Cheat_Sheet.html
+++ b/multivariable/Cheat_Sheet.html
@@ -176,6 +176,10 @@ Direction that it occurs in:<br>
 <img src="./Cheat_Sheet/equation016.png">
 </p>
 
+<p>
+If this wasn't enough, <a href="./Homework/Homework_4.html" title="homework 4 question 3" class="page">homework 4 question 3</a> has a wonderful explanation!
+</p>
+
 <h3>Equation of a Plane</h3>
 
 <p>
@@ -236,6 +240,126 @@ But what if the det <i>H</i> is less than 0? Then we have:<br>
 <p>
 If the det <i>H</i> is equal to 0, <b>then we have nothing to conclude!</b>
 </p>
+
+<h3>Vector Space</h3>
+
+<p>
+<ul>
+<li>Additive Closure</li>
+<li>Scalar Closure</li>
+<li>Commutativity</li>
+<li>Additive Associativity</li>
+<li>Zero Vector</li>
+<li>Additive Inverses</li>
+<li>Scalar Multiplication Associativity</li>
+<li>Distributivity across Vector Addition</li>
+<li>Distributivity across Scalar Addition</li>
+<li>One</li>
+</ul>
+</p>
+
+<p>
+For details, see <a href="http://linear.ups.edu/html/section-VS.html" title="this" class="http">this</a> webpage.
+</p>
+
+<h3>Dot (Inner) Product</h3>
+
+<p>
+Gives us a single scalar result. Good to note: Two vectors are <b>orthogonal</b> if their dot product is 0. Make sense because cos(π/2) = 0. That brings us to the actual formula:
+</p>
+
+<p>
+<img src="./Cheat_Sheet/equation019.png"><br>
+We can also multiply each corresponding component then add the result to get the dot product.
+</p>
+
+<h4>Projection</h4>
+
+<p>
+Continuing on the idea of a dot product, we can also find the <b>projection</b> of one vector onto another.
+</p>
+
+<p>
+<img src="./Cheat_Sheet/equation020.png"> gives us the projection of <b>v</b> onto <b>u.</b><br>
+In particular, this is the <b>scalar projection</b> of <b>v</b> onto <b>u</b>. For the <b>vector projection</b>, we use a different formula.
+</p>
+
+<h3>Cross Product</h3>
+
+<p>
+The cross product gives us a vector that is <b>orthogonal</b> to two other vectors. Note, the cross product can only be done in 3D space.
+</p>
+
+<p>
+The following is how you take the cross product for vectors <b>v</b> = (-3, 2, 1) and <b>u</b> = (0, 0, 1):
+</p>
+
+<p>
+<img src="./Cheat_Sheet/equation021.png"><br>
+You are taking determinants. Also, don't forget that for <b>j</b> you subtract!
+</p>
+
+<h3>Determinants</h3>
+
+<p>
+A scalar value that we can compute from a square matrix. We denote it like so:<br>
+det(A)<br>
+where A is a matrix.<br>
+Geometrically, you can view it as the volume scaling factor of the linear transformation described by the matrix.
+</p>
+
+<h3>Normalize</h3>
+
+<p>
+When we want to normalize (turn into a unit vector) a vector, we write:<br>
+<img src="./Cheat_Sheet/equation022.png"><br>
+for some vector <b>v</b>.
+</p>
+
+<h3>Norm (Length of a vector)</h3>
+
+<p>
+Let <b>v</b> = (a, b, c)<br>
+<img src="./Cheat_Sheet/equation023.png"><br>
+This works no matter the number of components of the vector <b>v</b>.
+</p>
+
+<h3>Triangle Inequality</h3>
+
+<p>
+<img src="./Cheat_Sheet/equation024.png"><br>
+<img src="./images/triangle-inequality.png" height="284">
+</p>
+
+<h3>Linearly Independent</h3>
+
+<p>
+Vectors are <b>linearly independent</b> if the only way to achieve a <b>0</b> when adding them all together is to set their coefficients to 0.
+</p>
+
+<h3>Linear Map</h3>
+
+<p>
+A linear map (or linear function) must have the following property:<br>
+<img src="./Cheat_Sheet/equation025.png"><br>
+If it does not, then <b>it is not</b> a linear map!
+</p>
+
+<h3>Conservative</h3>
+
+<p>
+<img src="./Cheat_Sheet/equation026.png">
+</p>
+
+<p>
+If these all hold, then the vector field <b>F</b> is conservative (for 3D space)
+</p>
+
+<p>
+If working in 2D space, then just check if:<br>
+<img src="./Cheat_Sheet/equation027.png">
+</p>
+
 
 	</div>
 
@@ -358,6 +482,60 @@ If the det <i>H</i> is equal to 0, <b>then we have nothing to conclude!</b>
 
 
 			<tr><td><a href='./Cheat_Sheet/equation018.tex'>equation018.tex</a></td><td>&nbsp;</td><td>194b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation019.png'>equation019.png</a></td><td>&nbsp;</td><td>968b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation019.tex'>equation019.tex</a></td><td>&nbsp;</td><td>110b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation020.png'>equation020.png</a></td><td>&nbsp;</td><td>1.01kb</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation020.tex'>equation020.tex</a></td><td>&nbsp;</td><td>107b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation021.png'>equation021.png</a></td><td>&nbsp;</td><td>4.89kb</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation021.tex'>equation021.tex</a></td><td>&nbsp;</td><td>575b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation022.png'>equation022.png</a></td><td>&nbsp;</td><td>405b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation022.tex'>equation022.tex</a></td><td>&nbsp;</td><td>49b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation023.png'>equation023.png</a></td><td>&nbsp;</td><td>741b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation023.tex'>equation023.tex</a></td><td>&nbsp;</td><td>47b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation024.png'>equation024.png</a></td><td>&nbsp;</td><td>959b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation024.tex'>equation024.tex</a></td><td>&nbsp;</td><td>142b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation025.png'>equation025.png</a></td><td>&nbsp;</td><td>1.01kb</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation025.tex'>equation025.tex</a></td><td>&nbsp;</td><td>114b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation026.png'>equation026.png</a></td><td>&nbsp;</td><td>1.01kb</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation026.tex'>equation026.tex</a></td><td>&nbsp;</td><td>203b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation027.png'>equation027.png</a></td><td>&nbsp;</td><td>659b</td></tr>
+
+
+			<tr><td><a href='./Cheat_Sheet/equation027.tex'>equation027.tex</a></td><td>&nbsp;</td><td>67b</td></tr>
 
 			</table>
 	</div>
