--- a/multivariable/Homework/Homework_5.html
+++ b/multivariable/Homework/Homework_5.html
@@ -620,9 +620,86 @@ Evaluate each of the following integrals:<br>
 
 <h3>Question 14</h3>
 
-<br>
-<br>
-<br>
+<p>
+Let <i>P</i> be the parallelogram bounded by <img src="./Homework_5/equation105.png">. Evaluate:<br>
+<img src="./Homework_5/equation106.png"><br>
+(Hint: Make a change of variables <img src="./Homework_5/equation107.png">)
+</p>
+
+<p>
+To start, it's hard to see how the parallelogram is bounded so I'm gonna rewrite it:<br>
+<img src="./Homework_5/equation108.png">
+</p>
+
+<p>
+Next, let's make use of that hint the professor gave us. Let us have the following transformation:<br>
+<img src="./Homework_5/equation109.png">
+</p>
+
+<p>
+He notes that it is one-to-one and takes the rectangle P<sub>1</sub> bounded by the following onto P:<br>
+<img src="./Homework_5/equation110.png">
+</p>
+
+<p>
+If you're wondering how we got those numbers, just plug in and solve based on y = 2x and the rest of those.
+</p>
+
+<p>
+Next, we do a good ol' <b>Jacobian</b> like so:<br>
+<img src="./Homework_5/equation111.png">
+</p>
+
+<p>
+I'm not 100% sure why we do the Jacobian for this problem though... A quick search online says that the determinate of the Jacobian matrix,<br>
+"<i>is used for when you want to integrate a function in a different basis, to make integration easier. For example, if you want to integrate across a circle, you would usually take the double integral in polar coordinates. Going to polar coordinates is a transformation, and thus has a Jacobian. When we integrate in polar coordinates, we stick an r unto the function we are integrating, this r is simply the Jacobian of the Cartesian -&gt; polar transformation. This can be extended to any transformation however, if you want to compute the integral of a function in a different basis, you have to tack on the Jacobian of the transformation (as well as transform the integral) before you integrate.</i>" - <a href="https://www.quora.com/What-does-the-determinant-of-a-Jacobian-matrix-mean" title="Michael Kogan on Quora" class="https">Michael Kogan on Quora</a>
+</p>
+
+<p>
+Either way, we now have:<br>
+<img src="./Homework_5/equation112.png">
+</p>
+
+<h3>Question 15</h3>
+
+<p>
+Evaluate:<br>
+<img src="./Homework_5/equation120.png"><br>
+where R is the region in the first quadrant lying between the circles <img src="./Homework_5/equation121.png"> with 0 &lt; a &lt; b.
+</p>
+
+<p>
+<i>It's really late. I'm stopping here for sleep. Good luck on the final everybody.</i>
+</p>
+
+<h3>Question 16</h3>
+
+<p>
+Fuck
+</p>
+
+<h3>Question 17</h3>
+
+<p>
+Using again spherical coordinates in <img src="./Homework_5/equation113.png">, calculate the volume of the sphere of radius <img src="./Homework_5/equation115.png">, centered at (0, 0, 0).
+</p>
+
+<p>
+The volume of the ball (i.e. of the sphere S<sup>2</sup> in <img src="./Homework_5/equation116.png">) is given by the triple integral:<br>
+<img src="./Homework_5/equation117.png"><br>
+Here, we will use again spherical coordinates as follows:<br>
+<img src="./Homework_5/equation118.png">
+</p>
+
+<p>
+We then have:<br>
+<img src="./Homework_5/equation119.png">
+</p>
+
+<p>
+It might look intimidating but this integral actually isn't too bad to do by hand. I double checked it on my whiteboard and got the right answer.
+</p>
+
 <br>
 <br>
 <br>
@@ -1269,6 +1346,108 @@ Evaluate each of the following integrals:<br>
 
 
 			<tr><td><a href='./Homework_5/equation104.tex'>equation104.tex</a></td><td>&nbsp;</td><td>14b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation105.png'>equation105.png</a></td><td>&nbsp;</td><td>860b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation105.tex'>equation105.tex</a></td><td>&nbsp;</td><td>49b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation106.png'>equation106.png</a></td><td>&nbsp;</td><td>738b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation106.tex'>equation106.tex</a></td><td>&nbsp;</td><td>14b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation107.png'>equation107.png</a></td><td>&nbsp;</td><td>490b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation107.tex'>equation107.tex</a></td><td>&nbsp;</td><td>21b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation108.png'>equation108.png</a></td><td>&nbsp;</td><td>680b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation108.tex'>equation108.tex</a></td><td>&nbsp;</td><td>39b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation109.png'>equation109.png</a></td><td>&nbsp;</td><td>693b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation109.tex'>equation109.tex</a></td><td>&nbsp;</td><td>25b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation110.png'>equation110.png</a></td><td>&nbsp;</td><td>549b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation110.tex'>equation110.tex</a></td><td>&nbsp;</td><td>30b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation111.png'>equation111.png</a></td><td>&nbsp;</td><td>2.05kb</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation111.tex'>equation111.tex</a></td><td>&nbsp;</td><td>358b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation112.png'>equation112.png</a></td><td>&nbsp;</td><td>3.04kb</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation112.tex'>equation112.tex</a></td><td>&nbsp;</td><td>178b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation113.png'>equation113.png</a></td><td>&nbsp;</td><td>278b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation113.tex'>equation113.tex</a></td><td>&nbsp;</td><td>12b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation114.png'>equation114.png</a></td><td>&nbsp;</td><td>224b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation114.tex'>equation114.tex</a></td><td>&nbsp;</td><td>6b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation115.png'>equation115.png</a></td><td>&nbsp;</td><td>220b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation115.tex'>equation115.tex</a></td><td>&nbsp;</td><td>4b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation116.png'>equation116.png</a></td><td>&nbsp;</td><td>278b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation116.tex'>equation116.tex</a></td><td>&nbsp;</td><td>12b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation117.png'>equation117.png</a></td><td>&nbsp;</td><td>803b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation117.tex'>equation117.tex</a></td><td>&nbsp;</td><td>15b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation118.png'>equation118.png</a></td><td>&nbsp;</td><td>937b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation118.tex'>equation118.tex</a></td><td>&nbsp;</td><td>55b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation119.png'>equation119.png</a></td><td>&nbsp;</td><td>2.21kb</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation119.tex'>equation119.tex</a></td><td>&nbsp;</td><td>107b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation120.png'>equation120.png</a></td><td>&nbsp;</td><td>1.06kb</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation120.tex'>equation120.tex</a></td><td>&nbsp;</td><td>26b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation121.png'>equation121.png</a></td><td>&nbsp;</td><td>727b</td></tr>
+
+
+			<tr><td><a href='./Homework_5/equation121.tex'>equation121.tex</a></td><td>&nbsp;</td><td>33b</td></tr>
 
 			</table>
 	</div>
